switch to deep insights level

--- a/flux/0.3.0/manifests/flux.v0.3.0.clusterserviceversion.yaml
+++ b/flux/0.3.0/manifests/flux.v0.3.0.clusterserviceversion.yaml
@@ -191,7 +191,7 @@ metadata:
           }
         }
       ]
-    capabilities: Basic Install
+    capabilities: Deep Insights
     categories: Integration & Delivery
     certified: "false"
     description: Open and extensible continuous delivery solution for Kubernetes.
