--- a/flux/0.2.4/manifests/flux.v0.2.4.clusterserviceversion.yaml
+++ b/flux/0.2.4/manifests/flux.v0.2.4.clusterserviceversion.yaml
@@ -191,7 +191,7 @@ metadata:
           }
         }
       ]
-    capabilities: Basic Install
+    capabilities: Seamless Upgrades
     categories: Integration & Delivery
     certified: "false"
     description: Open and extensible continuous delivery solution for Kubernetes.
@@ -582,3 +582,4 @@ spec:
       supported: true
     - type: AllNamespaces
       supported: true
+  replaces: flux.v0.2.3
