--- a/templates/clusterserviceversion.yaml
+++ b/templates/clusterserviceversion.yaml
@@ -191,7 +191,7 @@ metadata:
           }
         }
       ]
-    capabilities: Deep Insights
+    capabilities: Seamless Upgrades
     categories: Integration & Delivery
     certified: "false"
     description: |-
