--- a/flux/0.2.4/manifests/flux.v0.2.4.clusterserviceversion.yaml
+++ b/flux/0.2.4/manifests/flux.v0.2.4.clusterserviceversion.yaml
@@ -352,7 +352,7 @@ spec:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.namespace
-                    image: ghcr.io/fluxcd/source-controller:v0.3.0
+                    image: ghcr.io/fluxcd/source-controller:v0.4.1
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       httpGet:
@@ -418,7 +418,7 @@ spec:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.namespace
-                    image: ghcr.io/fluxcd/kustomize-controller:v0.3.0
+                    image: ghcr.io/fluxcd/kustomize-controller:v0.4.0
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       httpGet:
@@ -483,16 +483,23 @@ spec:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.namespace
-                    image: ghcr.io/fluxcd/helm-controller:v0.3.0
+                    image: ghcr.io/fluxcd/helm-controller:v0.4.1
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       httpGet:
-                        path: /metrics
-                        port: http-prom
+                        path: /healthz
+                        port: healthz
                     name: manager
                     ports:
                       - containerPort: 8080
                         name: http-prom
+                      - containerPort: 9440
+                        name: healthz
+                        protocol: TCP
+                    readinessProbe:
+                      httpGet:
+                        path: /readyz
+                        port: healthz
                     resources:
                       limits:
                         cpu: 1000m
@@ -538,12 +545,12 @@ spec:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.namespace
-                    image: ghcr.io/fluxcd/notification-controller:v0.3.0
+                    image: ghcr.io/fluxcd/notification-controller:v0.4.0
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       httpGet:
-                        path: /metrics
-                        port: http-prom
+                        path: /healthz
+                        port: healthz
                     name: manager
                     ports:
                       - containerPort: 9090
@@ -552,6 +559,13 @@ spec:
                         name: http-webhook
                       - containerPort: 8080
                         name: http-prom
+                      - containerPort: 9440
+                        name: healthz
+                        protocol: TCP
+                    readinessProbe:
+                      httpGet:
+                        path: /readyz
+                        port: healthz
                     resources:
                       limits:
                         cpu: 1000m
@@ -582,4 +596,3 @@ spec:
       supported: true
     - type: AllNamespaces
       supported: true
-  replaces: flux.v0.2.3
