--- a/flux/0.2.5/manifests/gitrepository.crd.yaml
+++ b/flux/0.2.5/manifests/gitrepository.crd.yaml
@@ -96,6 +96,10 @@ spec:
                         apiVersion, kind, uid?"
                       type: string
                   type: object
+                suspend:
+                  description: This flag tells the controller to suspend the reconciliation of
+                    this source.
+                  type: boolean
                 timeout:
                   default: 20s
                   description: The timeout for remote Git operations like cloning, defaults to
