--- a/flux/0.2.5/manifests/helmchart.crd.yaml
+++ b/flux/0.2.5/manifests/helmchart.crd.yaml
@@ -91,6 +91,10 @@ spec:
                     - kind
                     - name
                   type: object
+                suspend:
+                  description: This flag tells the controller to suspend the reconciliation of
+                    this source.
+                  type: boolean
                 valuesFile:
                   description: Alternative values file to use as the default chart values,
                     expected to be a relative path in the SourceRef. Ignored
