--- a/flux/0.2.5/manifests/helmrepository.crd.yaml
+++ b/flux/0.2.5/manifests/helmrepository.crd.yaml
@@ -71,6 +71,10 @@ spec:
                         apiVersion, kind, uid?"
                       type: string
                   type: object
+                suspend:
+                  description: This flag tells the controller to suspend the reconciliation of
+                    this source.
+                  type: boolean
                 timeout:
                   default: 60s
                   description: The timeout of index downloading, defaults to 60s.
