--- a/flux/0.2.5/manifests/provider.crd.yaml
+++ b/flux/0.2.5/manifests/provider.crd.yaml
@@ -84,6 +84,7 @@ spec:
                     - github
                     - gitlab
                     - bitbucket
+                    - azuredevops
                   type: string
                 username:
                   description: Bot username for this provider
