--- a/flux/0.2.6/manifests/helmrelease.crd.yaml
+++ b/flux/0.2.6/manifests/helmrelease.crd.yaml
@@ -137,6 +137,12 @@ spec:
                   description: Install holds the configuration for Helm install actions for this
                     HelmRelease.
                   properties:
+                    createNamespace:
+                      description: CreateNamespace tells the Helm install action to create the
+                        HelmReleaseSpec.TargetNamespace if it does not exist
+                        yet. On uninstall, the namespace will not be garbage
+                        collected.
+                      type: boolean
                     disableHooks:
                       description: DisableHooks prevents hooks from running during the Helm install
                         action.
@@ -193,6 +199,8 @@ spec:
                   type: string
                 kubeConfig:
                   description: KubeConfig for reconciling the HelmRelease on a remote cluster.
+                    When specified, KubeConfig takes precedence over
+                    ServiceAccountName.
                   properties:
                     secretRef:
                       description: SecretRef holds the name to a secret that contains a 'value' key
@@ -252,6 +260,10 @@ spec:
                         rollback action. Defaults to 'HelmReleaseSpec.Timeout'.
                       type: string
                   type: object
+                serviceAccountName:
+                  description: The name of the Kubernetes service account to impersonate when
+                    reconciling this HelmRelease.
+                  type: string
                 suspend:
                   description: Suspend tells the controller to suspend reconciliation for this
                     HelmRelease, it does not apply to already started
