--- a/test/operator-subscription.yaml
+++ b/test/operator-subscription.yaml
@@ -2,10 +2,10 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: flux-subscription
-  namespace: operators # all namespaces
+  namespace: openshift-marketplace # all namespaces
 spec:
   channel: alpha
   name: flux
-  startingCSV: flux.v0.2.2
-  source: flux
-  sourceNamespace: olm
+  startingCSV: flux.v0.2.4
+  source: custom
+  sourceNamespace: openshift-marketplace
