--- a/templates/clusterserviceversion.yaml
+++ b/templates/clusterserviceversion.yaml
@@ -37,10 +37,14 @@ metadata:
           "kind": "GitRepository",
           "metadata": {
               "name": "podinfo",
-              "namespace": "default"
+              "namespace": "dev"
           },
           "spec": {
               "interval": "1m",
+              "prune": true,
+              "ref": {
+                "branch": "master"
+              },
               "url": "https://github.com/stefanprodan/podinfo"
           }
         },
@@ -95,23 +99,16 @@ metadata:
           "apiVersion": "kustomize.toolkit.fluxcd.io/v1beta1",
           "kind": "Kustomization",
           "metadata": {
-              "name": "istio",
-              "namespace": "istio-system"
+              "name": "podinfo",
+              "namespace": "dev"
           },
           "spec": {
               "interval": "5m",
-              "path": "./profiles/default/",
+              "path": "./deploy/overlays/dev",
               "sourceRef": {
                 "kind": "GitRepository",
-                "name": "istio"
+                "name": "podinfo"
               },
-              "healthChecks": [
-                {
-                    "kind": "Deployment",
-                    "name": "istiod",
-                    "namespace": "istio-system"
-                }
-              ],
               "timeout": "2m"
           }
         },
