--- a/flux/0.16.0/manifests/alert.crd.yaml
+++ b/flux/0.16.0/manifests/alert.crd.yaml
@@ -7,15 +7,15 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: 0.15.3
-  name: receivers.notification.toolkit.fluxcd.io
+    app.kubernetes.io/version: 0.16.0
+  name: alerts.notification.toolkit.fluxcd.io
 spec:
   group: notification.toolkit.fluxcd.io
   names:
-    kind: Receiver
-    listKind: ReceiverList
-    plural: receivers
-    singular: receiver
+    kind: Alert
+    listKind: AlertList
+    plural: alerts
+    singular: alert
   scope: Namespaced
   versions:
     - additionalPrinterColumns:
@@ -31,7 +31,7 @@ spec:
       name: v1beta1
       schema:
         openAPIV3Schema:
-          description: Receiver is the Schema for the receivers API
+          description: Alert is the Schema for the alerts API
           properties:
             apiVersion:
               description: "APIVersion defines the versioned schema of this representation of
@@ -51,16 +51,19 @@ spec:
             metadata:
               type: object
             spec:
-              description: ReceiverSpec defines the desired state of Receiver
+              description: AlertSpec defines an alerting rule for events involving a list of
+                objects
               properties:
-                events:
-                  description: A list of events to handle, e.g. 'push' for GitHub or 'Push Hook'
-                    for GitLab.
-                  items:
-                    type: string
-                  type: array
-                resources:
-                  description: A list of resources to be notified about changes.
+                eventSeverity:
+                  default: info
+                  description: Filter events based on severity, defaults to ('info'). If set to
+                    'info' no events will be filtered.
+                  enum:
+                    - info
+                    - error
+                  type: string
+                eventSources:
+                  description: Filter events based on the involved objects.
                   items:
                     description: CrossNamespaceObjectReference contains enough information to let
                       you locate the typed referenced object at cluster level
@@ -95,9 +98,14 @@ spec:
                       - name
                     type: object
                   type: array
-                secretRef:
-                  description: Secret reference containing the token used to validate the payload
-                    authenticity
+                exclusionList:
+                  description: A list of Golang regular expressions to be used for excluding
+                    messages.
+                  items:
+                    type: string
+                  type: array
+                providerRef:
+                  description: Send events using this provider.
                   properties:
                     name:
                       description: Name of the referent
@@ -105,32 +113,19 @@ spec:
                   required:
                     - name
                   type: object
+                summary:
+                  description: Short description of the impact and affected cluster.
+                  type: string
                 suspend:
                   description: This flag tells the controller to suspend subsequent events
-                    handling. Defaults to false.
+                    dispatching. Defaults to false.
                   type: boolean
-                type:
-                  description: Type of webhook sender, used to determine the validation procedure
-                    and payload deserialization.
-                  enum:
-                    - generic
-                    - generic-hmac
-                    - github
-                    - gitlab
-                    - bitbucket
-                    - harbor
-                    - dockerhub
-                    - quay
-                    - gcr
-                    - nexus
-                    - acr
-                  type: string
               required:
-                - resources
-                - type
+                - eventSources
+                - providerRef
               type: object
             status:
-              description: ReceiverStatus defines the observed state of Receiver
+              description: AlertStatus defines the observed state of Alert
               properties:
                 conditions:
                   items:
@@ -213,10 +208,6 @@ spec:
                   description: ObservedGeneration is the last observed generation.
                   format: int64
                   type: integer
-                url:
-                  description: Generated webhook URL in the format of
-                    '/hook/sha256sum(token+name+namespace)'.
-                  type: string
               type: object
           type: object
       served: true
