--- a/flux/0.16.0/manifests/bucket.crd.yaml
+++ b/flux/0.16.0/manifests/bucket.crd.yaml
@@ -7,18 +7,21 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: 0.15.3
-  name: alerts.notification.toolkit.fluxcd.io
+    app.kubernetes.io/version: 0.16.0
+  name: buckets.source.toolkit.fluxcd.io
 spec:
-  group: notification.toolkit.fluxcd.io
+  group: source.toolkit.fluxcd.io
   names:
-    kind: Alert
-    listKind: AlertList
-    plural: alerts
-    singular: alert
+    kind: Bucket
+    listKind: BucketList
+    plural: buckets
+    singular: bucket
   scope: Namespaced
   versions:
     - additionalPrinterColumns:
+        - jsonPath: .spec.url
+          name: URL
+          type: string
         - jsonPath: .status.conditions[?(@.type=="Ready")].status
           name: Ready
           type: string
@@ -31,7 +34,7 @@ spec:
       name: v1beta1
       schema:
         openAPIV3Schema:
-          description: Alert is the Schema for the alerts API
+          description: Bucket is the Schema for the buckets API
           properties:
             apiVersion:
               description: "APIVersion defines the versioned schema of this representation of
@@ -51,61 +54,39 @@ spec:
             metadata:
               type: object
             spec:
-              description: AlertSpec defines an alerting rule for events involving a list of
-                objects
+              description: BucketSpec defines the desired state of an S3 compatible bucket
               properties:
-                eventSeverity:
-                  default: info
-                  description: Filter events based on severity, defaults to ('info'). If set to
-                    'info' no events will be filtered.
-                  enum:
-                    - info
-                    - error
+                bucketName:
+                  description: The bucket name.
                   type: string
-                eventSources:
-                  description: Filter events based on the involved objects.
-                  items:
-                    description: CrossNamespaceObjectReference contains enough information to let
-                      you locate the typed referenced object at cluster level
-                    properties:
-                      apiVersion:
-                        description: API version of the referent
-                        type: string
-                      kind:
-                        description: Kind of the referent
-                        enum:
-                          - Bucket
-                          - GitRepository
-                          - Kustomization
-                          - HelmRelease
-                          - HelmChart
-                          - HelmRepository
-                          - ImageRepository
-                          - ImagePolicy
-                          - ImageUpdateAutomation
-                        type: string
-                      name:
-                        description: Name of the referent
-                        maxLength: 53
-                        minLength: 1
-                        type: string
-                      namespace:
-                        description: Namespace of the referent
-                        maxLength: 53
-                        minLength: 1
-                        type: string
-                    required:
-                      - name
-                    type: object
-                  type: array
-                exclusionList:
-                  description: A list of Golang regular expressions to be used for excluding
-                    messages.
-                  items:
-                    type: string
-                  type: array
-                providerRef:
-                  description: Send events using this provider.
+                endpoint:
+                  description: The bucket endpoint address.
+                  type: string
+                ignore:
+                  description: Ignore overrides the set of excluded patterns in the .sourceignore
+                    format (which is the same as .gitignore). If not provided, a
+                    default will be used, consult the documentation for your
+                    version to find out what those are.
+                  type: string
+                insecure:
+                  description: Insecure allows connecting to a non-TLS S3 HTTP endpoint.
+                  type: boolean
+                interval:
+                  description: The interval at which to check for bucket updates.
+                  type: string
+                provider:
+                  default: generic
+                  description: The S3 compatible storage provider name, default ('generic').
+                  enum:
+                    - generic
+                    - aws
+                  type: string
+                region:
+                  description: The bucket region.
+                  type: string
+                secretRef:
+                  description: The name of the secret containing authentication credentials for
+                    the Bucket.
                   properties:
                     name:
                       description: Name of the referent
@@ -113,21 +94,50 @@ spec:
                   required:
                     - name
                   type: object
-                summary:
-                  description: Short description of the impact and affected cluster.
-                  type: string
                 suspend:
-                  description: This flag tells the controller to suspend subsequent events
-                    dispatching. Defaults to false.
+                  description: This flag tells the controller to suspend the reconciliation of
+                    this source.
                   type: boolean
+                timeout:
+                  default: 20s
+                  description: The timeout for download operations, defaults to 20s.
+                  type: string
               required:
-                - eventSources
-                - providerRef
+                - bucketName
+                - endpoint
+                - interval
               type: object
             status:
-              description: AlertStatus defines the observed state of Alert
+              description: BucketStatus defines the observed state of a bucket
               properties:
+                artifact:
+                  description: Artifact represents the output of the last successful Bucket sync.
+                  properties:
+                    checksum:
+                      description: Checksum is the SHA1 checksum of the artifact.
+                      type: string
+                    lastUpdateTime:
+                      description: LastUpdateTime is the timestamp corresponding to the last update of
+                        this artifact.
+                      format: date-time
+                      type: string
+                    path:
+                      description: Path is the relative file path of this artifact.
+                      type: string
+                    revision:
+                      description: Revision is a human readable identifier traceable in the origin
+                        source system. It can be a Git commit SHA, Git tag, a
+                        Helm index timestamp, a Helm chart version, etc.
+                      type: string
+                    url:
+                      description: URL is the HTTP address of this artifact.
+                      type: string
+                  required:
+                    - path
+                    - url
+                  type: object
                 conditions:
+                  description: Conditions holds the conditions for the Bucket.
                   items:
                     description: >-
                       Condition contains details for one aspect of the current
@@ -204,10 +214,18 @@ spec:
                       - type
                     type: object
                   type: array
+                lastHandledReconcileAt:
+                  description: LastHandledReconcileAt holds the value of the most recent reconcile
+                    request value, so a change can be detected.
+                  type: string
                 observedGeneration:
                   description: ObservedGeneration is the last observed generation.
                   format: int64
                   type: integer
+                url:
+                  description: URL is the download link for the artifact output of the last Bucket
+                    sync.
+                  type: string
               type: object
           type: object
       served: true
