--- a/flux/0.16.0/manifests/flux.v0.16.0.clusterserviceversion.yaml
+++ b/flux/0.16.0/manifests/flux.v0.16.0.clusterserviceversion.yaml
@@ -1,10 +1,10 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
-  name: flux.v0.15.3
+  name: flux.v0.16.0
   namespace: flux-system
   annotations:
-    alm-examples: |-
+    alm-examples: >-
       [
         {
           "apiVersion": "helm.toolkit.fluxcd.io/v2beta1",
@@ -188,11 +188,11 @@ metadata:
           }
         },
         {
-          "apiVersion": "image.toolkit.fluxcd.io/v1alpha1",
+          "apiVersion": "image.toolkit.fluxcd.io/v1beta1",
           "kind": "ImageRepository",
           "metadata": {
               "name": "podinfo",
-              "namespace": "default"
+              "namespace": "flux-system"
           },
           "spec": {
               "image": "ghcr.io/stefanprodan/podinfo",
@@ -200,11 +200,11 @@ metadata:
           }
         },
         {
-          "apiVersion": "image.toolkit.fluxcd.io/v1alpha1",
+          "apiVersion": "image.toolkit.fluxcd.io/v1beta1",
           "kind": "ImagePolicy",
           "metadata": {
               "name": "podinfo",
-              "namespace": "default"
+              "namespace": "flux-system"
           },
           "spec": {
               "imageRepositoryRef": {
@@ -218,28 +218,39 @@ metadata:
           }
         },
         {
-          "apiVersion": "image.toolkit.fluxcd.io/v1alpha1",
+          "apiVersion": "image.toolkit.fluxcd.io/v1beta1",
           "kind": "ImageUpdateAutomation",
           "metadata": {
-              "name": "flux-system",
-              "namespace": "default"
+            "name": "flux-system",
+            "namespace": "flux-system"
           },
           "spec": {
+            "interval": "1m0s",
+            "sourceRef": {
+              "kind": "GitRepository",
+              "name": "flux-system"
+            },
+            "git": {
               "checkout": {
-                "branch": "main",
-                "gitRepositoryRef": {
-                    "name": "flux-system"
+                "ref": {
+                  "branch": "main"
                 }
               },
               "commit": {
-                "authorEmail": "fluxcdbot@users.noreply.github.com",
-                "authorName": "fluxcdbot",
-                "messageTemplate": "[ci skip] update image"
+                "author": {
+                  "email": "fluxcdbot@users.noreply.github.com",
+                  "name": "fluxcdbot"
+                },
+                "messageTemplate": "{{range .Updated.Images}}{{println .}}{{end}}"
               },
-              "interval": "1m0s",
-              "update": {
-                "strategy": "Setters"
+              "push": {
+                "branch": "main"
               }
+            },
+            "update": {
+              "path": "./clusters/my-cluster",
+              "strategy": "Setters"
+            }
           }
         }
       ]
@@ -249,9 +260,9 @@ metadata:
     description: Flux is a Continuous Delivery solution for Kubernetes.
     support: FluxCD Community
     operatorframework.io/suggested-namespace: flux-system
-    containerImage: ghcr.io/fluxcd/source-controller:v0.15.2
+    containerImage: ghcr.io/fluxcd/source-controller:v0.15.3
 spec:
-  version: 0.15.3
+  version: 0.16.0
   maturity: stable
   keywords:
     - flux
@@ -316,17 +327,17 @@ spec:
       - name: imagepolicies.image.toolkit.fluxcd.io
         displayName: ImagePolicy
         kind: ImagePolicy
-        version: v1alpha1
+        version: v1beta1
         description: ImagePolicy
       - name: imagerepositories.image.toolkit.fluxcd.io
         displayName: ImageRepository
         kind: ImageRepository
-        version: v1alpha1
+        version: v1beta1
         description: ImageRepository
       - name: imageupdateautomations.image.toolkit.fluxcd.io
         displayName: ImageUpdateAutomation
         kind: ImageUpdateAutomation
-        version: v1alpha1
+        version: v1beta1
         description: ImageUpdateAutomation
       - name: kustomizations.kustomize.toolkit.fluxcd.io
         displayName: Kustomization
@@ -389,10 +400,41 @@ spec:
     - Interoperability with Cluster API (CAPI) providers
 
 
-    ### Prerequisites
+    ### Optional Steps for OpenShift on AWS
 
 
-    Before installing Flux, perform the following steps to bind Flux to the `privileged` SecurityContextConstraint (SCC). This applies to installation via OC's OLM or via flux CLI.
+    Security Context with fsGroup=1337 is required to allow controller pods to connect to a certain list of AWS services.
+
+    To do so, please specifiy a patch for gotk-components.yaml using the following Kustomization file, for example.
+
+
+    ```yaml
+
+    apiVersion: kustomize.config.k8s.io/v1beta1
+
+    kind: Kustomization
+
+    resources:
+
+    - gotk-components.yaml
+
+    patches:
+      - patch: |-
+          apiVersion: apps/v1
+          kind: Deployment
+          metadata:
+            name: all
+          spec:
+            template:
+              spec:
+                securityContext:
+                  fsGroup: 1337
+        target:
+          kind: Deployment
+    ```
+
+
+    Then before installing Flux, please also perform the following steps to bind Flux to the `privileged` SecurityContextConstraint (SCC). This applies to installation via OC's OLM or via flux CLI.
 
 
     ```sh
@@ -567,7 +609,7 @@ spec:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.namespace
-                    image: ghcr.io/fluxcd/image-automation-controller:v0.13.0
+                    image: ghcr.io/fluxcd/image-automation-controller:v0.14.0
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       httpGet:
@@ -630,7 +672,7 @@ spec:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.namespace
-                    image: ghcr.io/fluxcd/image-reflector-controller:v0.10.0
+                    image: ghcr.io/fluxcd/image-reflector-controller:v0.11.0
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       httpGet:
@@ -697,7 +739,7 @@ spec:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.namespace
-                    image: ghcr.io/fluxcd/kustomize-controller:v0.13.0
+                    image: ghcr.io/fluxcd/kustomize-controller:v0.13.1
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       httpGet:
@@ -830,7 +872,7 @@ spec:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.namespace
-                    image: ghcr.io/fluxcd/source-controller:v0.15.2
+                    image: ghcr.io/fluxcd/source-controller:v0.15.3
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       httpGet:
