--- a/flux/0.16.0/manifests/helm-controller.serviceaccount.yaml
+++ b/flux/0.16.0/manifests/helm-controller.serviceaccount.yaml
@@ -4,5 +4,5 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: 0.15.3
-  name: source-controller
+    app.kubernetes.io/version: 0.16.0
+  name: helm-controller
