--- a/flux/0.16.0/manifests/kustomization.crd.yaml
+++ b/flux/0.16.0/manifests/kustomization.crd.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: 0.15.3
+    app.kubernetes.io/version: 0.16.0
   name: kustomizations.kustomize.toolkit.fluxcd.io
 spec:
   group: kustomize.toolkit.fluxcd.io
@@ -178,7 +178,9 @@ spec:
                       type: object
                   type: object
                 patches:
-                  description: Patches (also called overlays), defined as inline YAML objects.
+                  description: Strategic merge and JSON patches, defined as inline YAML objects,
+                    capable of targeting objects based on kind, label and
+                    annotation selectors.
                   items:
                     description: Patch contains either a StrategicMerge or a JSON6902 patch, either
                       a file or inline, and the target the patch should be
