update generated yamls for v0.16.1

--- a/flux/0.16.1/manifests/kustomize-controller.serviceaccount.yaml
+++ b/flux/0.16.1/manifests/kustomize-controller.serviceaccount.yaml
@@ -4,5 +4,5 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: 0.16.0
-  name: notification-controller
+    app.kubernetes.io/version: 0.16.1
+  name: kustomize-controller
