--- a/flux/0.16.1/manifests/notification-controller.service.yaml
+++ b/flux/0.16.1/manifests/notification-controller.service.yaml
@@ -4,15 +4,15 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: 0.16.0
+    app.kubernetes.io/version: 0.16.1
     control-plane: controller
-  name: webhook-receiver
+  name: notification-controller
 spec:
   ports:
     - name: http
       port: 80
       protocol: TCP
-      targetPort: http-webhook
+      targetPort: http
   selector:
     app: notification-controller
   type: ClusterIP
