--- a/flux/0.16.1/manifests/provider.crd.yaml
+++ b/flux/0.16.1/manifests/provider.crd.yaml
@@ -7,21 +7,18 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: 0.16.0
-  name: buckets.source.toolkit.fluxcd.io
+    app.kubernetes.io/version: 0.16.1
+  name: providers.notification.toolkit.fluxcd.io
 spec:
-  group: source.toolkit.fluxcd.io
+  group: notification.toolkit.fluxcd.io
   names:
-    kind: Bucket
-    listKind: BucketList
-    plural: buckets
-    singular: bucket
+    kind: Provider
+    listKind: ProviderList
+    plural: providers
+    singular: provider
   scope: Namespaced
   versions:
     - additionalPrinterColumns:
-        - jsonPath: .spec.url
-          name: URL
-          type: string
         - jsonPath: .status.conditions[?(@.type=="Ready")].status
           name: Ready
           type: string
@@ -34,7 +31,7 @@ spec:
       name: v1beta1
       schema:
         openAPIV3Schema:
-          description: Bucket is the Schema for the buckets API
+          description: Provider is the Schema for the providers API
           properties:
             apiVersion:
               description: "APIVersion defines the versioned schema of this representation of
@@ -54,39 +51,15 @@ spec:
             metadata:
               type: object
             spec:
-              description: BucketSpec defines the desired state of an S3 compatible bucket
+              description: ProviderSpec defines the desired state of Provider
               properties:
-                bucketName:
-                  description: The bucket name.
+                address:
+                  description: HTTP/S webhook address of this provider
+                  pattern: ^(http|https)://
                   type: string
-                endpoint:
-                  description: The bucket endpoint address.
-                  type: string
-                ignore:
-                  description: Ignore overrides the set of excluded patterns in the .sourceignore
-                    format (which is the same as .gitignore). If not provided, a
-                    default will be used, consult the documentation for your
-                    version to find out what those are.
-                  type: string
-                insecure:
-                  description: Insecure allows connecting to a non-TLS S3 HTTP endpoint.
-                  type: boolean
-                interval:
-                  description: The interval at which to check for bucket updates.
-                  type: string
-                provider:
-                  default: generic
-                  description: The S3 compatible storage provider name, default ('generic').
-                  enum:
-                    - generic
-                    - aws
-                  type: string
-                region:
-                  description: The bucket region.
-                  type: string
-                secretRef:
-                  description: The name of the secret containing authentication credentials for
-                    the Bucket.
+                certSecretRef:
+                  description: CertSecretRef can be given the name of a secret containing a
+                    PEM-encoded CA certificate (`caFile`)
                   properties:
                     name:
                       description: Name of the referent
@@ -94,50 +67,50 @@ spec:
                   required:
                     - name
                   type: object
-                suspend:
-                  description: This flag tells the controller to suspend the reconciliation of
-                    this source.
-                  type: boolean
-                timeout:
-                  default: 20s
-                  description: The timeout for download operations, defaults to 20s.
+                channel:
+                  description: Alert channel for this provider
                   type: string
-              required:
-                - bucketName
-                - endpoint
-                - interval
-              type: object
-            status:
-              description: BucketStatus defines the observed state of a bucket
-              properties:
-                artifact:
-                  description: Artifact represents the output of the last successful Bucket sync.
+                proxy:
+                  description: HTTP/S address of the proxy
+                  pattern: ^(http|https)://
+                  type: string
+                secretRef:
+                  description: Secret reference containing the provider webhook URL using
+                    "address" as data key
                   properties:
-                    checksum:
-                      description: Checksum is the SHA1 checksum of the artifact.
-                      type: string
-                    lastUpdateTime:
-                      description: LastUpdateTime is the timestamp corresponding to the last update of
-                        this artifact.
-                      format: date-time
-                      type: string
-                    path:
-                      description: Path is the relative file path of this artifact.
-                      type: string
-                    revision:
-                      description: Revision is a human readable identifier traceable in the origin
-                        source system. It can be a Git commit SHA, Git tag, a
-                        Helm index timestamp, a Helm chart version, etc.
-                      type: string
-                    url:
-                      description: URL is the HTTP address of this artifact.
+                    name:
+                      description: Name of the referent
                       type: string
                   required:
-                    - path
-                    - url
+                    - name
                   type: object
+                type:
+                  description: Type of provider
+                  enum:
+                    - slack
+                    - discord
+                    - msteams
+                    - rocket
+                    - generic
+                    - github
+                    - gitlab
+                    - bitbucket
+                    - azuredevops
+                    - googlechat
+                    - webex
+                    - sentry
+                    - azureeventhub
+                  type: string
+                username:
+                  description: Bot username for this provider
+                  type: string
+              required:
+                - type
+              type: object
+            status:
+              description: ProviderStatus defines the observed state of Provider
+              properties:
                 conditions:
-                  description: Conditions holds the conditions for the Bucket.
                   items:
                     description: >-
                       Condition contains details for one aspect of the current
@@ -214,18 +187,6 @@ spec:
                       - type
                     type: object
                   type: array
-                lastHandledReconcileAt:
-                  description: LastHandledReconcileAt holds the value of the most recent reconcile
-                    request value, so a change can be detected.
-                  type: string
-                observedGeneration:
-                  description: ObservedGeneration is the last observed generation.
-                  format: int64
-                  type: integer
-                url:
-                  description: URL is the download link for the artifact output of the last Bucket
-                    sync.
-                  type: string
               type: object
           type: object
       served: true
