--- a/flux/0.16.2/manifests/bucket.crd.yaml
+++ b/flux/0.16.2/manifests/bucket.crd.yaml
@@ -7,17 +7,15 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: 0.16.1
-  name: helmrepositories.source.toolkit.fluxcd.io
+    app.kubernetes.io/version: 0.16.2
+  name: buckets.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
   names:
-    kind: HelmRepository
-    listKind: HelmRepositoryList
-    plural: helmrepositories
-    shortNames:
-      - helmrepo
-    singular: helmrepository
+    kind: Bucket
+    listKind: BucketList
+    plural: buckets
+    singular: bucket
   scope: Namespaced
   versions:
     - additionalPrinterColumns:
@@ -36,7 +34,7 @@ spec:
       name: v1beta1
       schema:
         openAPIV3Schema:
-          description: HelmRepository is the Schema for the helmrepositories API
+          description: Bucket is the Schema for the buckets API
           properties:
             apiVersion:
               description: "APIVersion defines the versioned schema of this representation of
@@ -56,25 +54,39 @@ spec:
             metadata:
               type: object
             spec:
-              description: HelmRepositorySpec defines the reference to a Helm repository.
+              description: BucketSpec defines the desired state of an S3 compatible bucket
               properties:
-                interval:
-                  description: The interval at which to check the upstream for updates.
+                bucketName:
+                  description: The bucket name.
                   type: string
-                passCredentials:
-                  description: PassCredentials allows the credentials from the SecretRef to be
-                    passed on to a host that does not match the host as defined
-                    in URL. This may be required if the host of the advertised
-                    chart URLs in the index differ from the defined URL.
-                    Enabling this should be done with caution, as it can
-                    potentially result in credentials getting stolen in a
-                    MITM-attack.
+                endpoint:
+                  description: The bucket endpoint address.
+                  type: string
+                ignore:
+                  description: Ignore overrides the set of excluded patterns in the .sourceignore
+                    format (which is the same as .gitignore). If not provided, a
+                    default will be used, consult the documentation for your
+                    version to find out what those are.
+                  type: string
+                insecure:
+                  description: Insecure allows connecting to a non-TLS S3 HTTP endpoint.
                   type: boolean
+                interval:
+                  description: The interval at which to check for bucket updates.
+                  type: string
+                provider:
+                  default: generic
+                  description: The S3 compatible storage provider name, default ('generic').
+                  enum:
+                    - generic
+                    - aws
+                  type: string
+                region:
+                  description: The bucket region.
+                  type: string
                 secretRef:
                   description: The name of the secret containing authentication credentials for
-                    the Helm repository. For HTTP/S basic auth the secret must
-                    contain username and password fields. For TLS the secret
-                    must contain a certFile and keyFile, and/or caCert fields.
+                    the Bucket.
                   properties:
                     name:
                       description: Name of the referent
@@ -87,24 +99,19 @@ spec:
                     this source.
                   type: boolean
                 timeout:
-                  default: 60s
-                  description: The timeout of index downloading, defaults to 60s.
-                  type: string
-                url:
-                  description: The Helm repository URL, a valid URL contains at least a protocol
-                    and host.
+                  default: 20s
+                  description: The timeout for download operations, defaults to 20s.
                   type: string
               required:
+                - bucketName
+                - endpoint
                 - interval
-                - url
               type: object
             status:
-              description: HelmRepositoryStatus defines the observed state of the
-                HelmRepository.
+              description: BucketStatus defines the observed state of a bucket
               properties:
                 artifact:
-                  description: Artifact represents the output of the last successful repository
-                    sync.
+                  description: Artifact represents the output of the last successful Bucket sync.
                   properties:
                     checksum:
                       description: Checksum is the SHA1 checksum of the artifact.
@@ -130,7 +137,7 @@ spec:
                     - url
                   type: object
                 conditions:
-                  description: Conditions holds the conditions for the HelmRepository.
+                  description: Conditions holds the conditions for the Bucket.
                   items:
                     description: >-
                       Condition contains details for one aspect of the current
@@ -216,7 +223,8 @@ spec:
                   format: int64
                   type: integer
                 url:
-                  description: URL is the download link for the last index fetched.
+                  description: URL is the download link for the artifact output of the last Bucket
+                    sync.
                   type: string
               type: object
           type: object
