--- a/flux/0.16.2/manifests/image-reflector-controller.serviceaccount.yaml
+++ b/flux/0.16.2/manifests/image-reflector-controller.serviceaccount.yaml
@@ -4,5 +4,5 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: 0.16.1
-  name: helm-controller
+    app.kubernetes.io/version: 0.16.2
+  name: image-reflector-controller
