--- a/flux/0.16.2/manifests/notification-controller.service.yaml
+++ b/flux/0.16.2/manifests/notification-controller.service.yaml
@@ -4,9 +4,9 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: 0.16.1
+    app.kubernetes.io/version: 0.16.2
     control-plane: controller
-  name: source-controller
+  name: notification-controller
 spec:
   ports:
     - name: http
@@ -14,5 +14,5 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app: source-controller
+    app: notification-controller
   type: ClusterIP
