update flux to v0.20.1

--- a/templates/clusterserviceversion.yaml
+++ b/templates/clusterserviceversion.yaml
@@ -95,6 +95,24 @@ metadata:
           }
         },
         {
+          "apiVersion": "kustomize.toolkit.fluxcd.io/v1beta1",
+          "kind": "Kustomization",
+          "metadata": {
+              "name": "podinfo",
+              "namespace": "dev"
+          },
+          "spec": {
+              "interval": "5m",
+              "path": "./deploy/overlays/dev",
+              "prune": true,
+              "sourceRef": {
+                "kind": "GitRepository",
+                "name": "podinfo"
+              },
+              "timeout": "2m"
+          }
+        },
+        {
           "apiVersion": "kustomize.toolkit.fluxcd.io/v1beta2",
           "kind": "Kustomization",
           "metadata": {
@@ -109,7 +127,8 @@ metadata:
                 "kind": "GitRepository",
                 "name": "podinfo"
               },
-              "timeout": "2m"
+              "timeout": "2m",
+              "wait": true
           }
         },
         {
