implement UBI-based hyperflux image for RH certification
Signed-off-by: Chanwit Kaewkasi <chanwit@gmail.com>

 - add Dockerfile for hyperflux
 - add cross-build for hyperflux
 - parameterize images out of Dockerfile

--- a/test/003-catalog-source.yaml
+++ b/test/003-catalog-source.yaml
@@ -1,8 +1,9 @@
+---
 apiVersion: operators.coreos.com/v1alpha1
 kind: CatalogSource
 metadata:
   name: custom
-  namespace: flux-system
+  namespace: openshift-marketplace
 spec:
   displayName: custom
   description: custom
