--- a/test/001-flux-system-ns.yaml
+++ b/test/001-flux-system-ns.yaml
@@ -1,7 +1,12 @@
+---
 apiVersion: v1
 kind: Namespace
 metadata:
-  creationTimestamp: null
   name: flux-system
 spec: {}
-status: {}
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: openshift-marketplace
+spec: {}
