--- a/test/004-operator-subscription.yaml
+++ b/test/004-operator-subscription.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
@@ -8,4 +9,4 @@ spec:
   name: flux
   startingCSV: flux.v0.24.0
   source: custom
-  sourceNamespace: flux-system
+  sourceNamespace: openshift-marketplace
