upgrade flux to v0.26.0

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,7 +3,9 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 patches:
-  - patch: |-
+  - target:
+      kind: Deployment
+    patch: |-
       apiVersion: apps/v1
       kind: Deployment
       metadata:
@@ -14,5 +16,3 @@ patches:
             securityContext:
               fsGroup: 1337
               $patch: delete
-    target:
-      kind: Deployment
