--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,9 +3,7 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 patches:
-  - target:
-      kind: Deployment
-    patch: |-
+  - patch: |
       apiVersion: apps/v1
       kind: Deployment
       metadata:
@@ -13,6 +11,12 @@ patches:
       spec:
         template:
           spec:
-            securityContext:
-              fsGroup: 1337
-              $patch: delete
+            containers:
+              - name: manager
+                securityContext:
+                  runAsUser: 65534
+                  seccompProfile:
+                    $patch: delete
+    target:
+      kind: Deployment
+      labelSelector: app.kubernetes.io/part-of=flux
