--- a/test/003-catalog-source.yaml
+++ b/test/003-catalog-source.yaml
@@ -8,7 +8,7 @@ spec:
   description: custom
   publisher: custom
   sourceType: grpc
-  image: quay.io/openshift-fluxv2-poc/flux-index:latest
+  image: ghcr.io/weaveworks/openshift-fluxv2-index:latest
   updateStrategy:
     registryPoll:
       interval: 30m
